--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Muzz Exercise</string>
     <string name="type_something">Type something</string>
+    <string name="welcome">Welcome</string>
+    <string name="main">Main</string>
 
 <!--    Content description-->
     <string name="arrow_back">Arrow back</string>
