--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="type_something">Type something</string>
     <string name="welcome">Welcome</string>
     <string name="main">Main</string>
+    <string name="go_to_chat">Go to chat</string>
 
 <!--    Content description-->
     <string name="arrow_back">Arrow back</string>
