--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
 
     <!--    Content description-->
     <string name="arrow_back">Arrow back</string>
+    <string name="profile_image">Profile image</string>
 </resources>
